--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
     environment:
       - ENV=production  # Set environment to production
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:11434"]  # Healthcheck to verify Ollama is running
+      test: ["CMD", "nc", "-z", "localhost", "11434"]  # Healthcheck to verify Ollama is running
       interval: 30s
       timeout: 10s
       retries: 3
