--- a/nginx.conf
+++ b/nginx.conf
@@ -1,43 +1,52 @@
-server {
-    listen 80;
-    server_name example.com;
+worker_processes 1;
 
-    # Redirect all HTTP requests to HTTPS
-    return 301 https://$host$request_uri;
-}
+events { worker_connections 1024; }
 
-server {
-    listen 443 ssl http2;
-    server_name example.com;
+http {
 
-    # SSL settings
-    ssl_certificate /etc/nginx/ssl/cert/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/cert/privkey.pem;
+    sendfile on;
 
-    # Security headers for SSL
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-    ssl_prefer_server_ciphers on;
+    gzip              on;
+    gzip_http_version 1.0;
+    gzip_proxied      any;
+    gzip_min_length   500;
+    gzip_disable      "MSIE [1-6]\.";
+    gzip_types        text/plain text/xml text/css
+                      text/comma-separated-values
+                      text/javascript
+                      application/x-javascript
+                      application/atom+xml;
 
-    # Enable HSTS (HTTP Strict Transport Security)
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    # List of application servers
+    upstream app_servers {
+    
+        server open-webui:8080;
+    
+    }
 
-    location / {
-        proxy_pass http://open-webui:8080;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    # Configuration for the server
+   server {
+        listen 80;
+        server_name example.com;  # Replace with your actual domain
 
-        # WebSocket support
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+        # Redirect all HTTP requests to HTTPS
+        return 301 https://$server_name$request_uri;
+    }
 
-        # Timeout settings
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
-        send_timeout 60s;
+    # HTTPS server block with reverse proxy configuration
+    server {
+        listen 443 ssl;
+        server_name example.com;  # Replace with your actual domain
+
+        ssl_certificate /etc/nginx/cert/cert.pem;
+        ssl_certificate_key /etc/nginx/cert/key.pem;
+
+        location / {
+            proxy_pass http://open-webui:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
 }
