--- a/nginx.conf
+++ b/nginx.conf
@@ -1,52 +1,73 @@
-worker_processes 1;
+worker_processes auto;
 
-events { worker_connections 1024; }
+events {
+    worker_connections 4096;
+}
 
 http {
-
     sendfile on;
 
-    gzip              on;
-    gzip_http_version 1.0;
-    gzip_proxied      any;
-    gzip_min_length   500;
-    gzip_disable      "MSIE [1-6]\.";
-    gzip_types        text/plain text/xml text/css
-                      text/comma-separated-values
-                      text/javascript
-                      application/x-javascript
-                      application/atom+xml;
+    http2 on;
 
-    # List of application servers
+    gzip on;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+
+    # Upstream server configuration
     upstream app_servers {
-    
         server open-webui:8080;
-    
     }
+
+    # Read server name from .env file
+    env SERVER_NAME;
 
     # Configuration for the server
-   server {
+    server {
         listen 80;
-        server_name example.com;  # Replace with your actual domain
+        server_name $SERVER_NAME;
 
         # Redirect all HTTP requests to HTTPS
-        return 301 https://$server_name$request_uri;
+        return 301 https://$SERVER_NAME$request_uri;
     }
 
-    # HTTPS server block with reverse proxy configuration
+    # HTTPS server block with reverse proxy configuration and HSTS header
     server {
         listen 443 ssl;
-        server_name example.com;  # Replace with your actual domain
+        server_name $SERVER_NAME;
 
-        ssl_certificate /etc/nginx/cert/cert.pem;
-        ssl_certificate_key /etc/nginx/cert/key.pem;
+        ssl_certificate /path/to/cert.pem;
+        ssl_certificate_key /path/to/key.pem;
+
+        # Enable SSL/TLS protocols and ciphers (adjust as needed)
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256';
+
+        # Add HSTS header
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
 
         location / {
-            proxy_pass http://open-webui:8080;
+            proxy_pass http://app_servers;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Leverage browser caching for static assets
+            location ~* \.(jpg|jpeg|png|gif|ico|css|js|ttf|woff|woff2|svg)$ {
+                expires max;
+                add_header Cache-Control "public, immutable, max-age=31536000";
+            }
+
+            # Enable Nginx caching for specific resources
+            location /static/ {
+                proxy_cache static_cache;
+                proxy_cache_valid 200 302 1h;
+                proxy_cache_valid 404 1m;
+                proxy_cache_key "$scheme$request_method$host$request_uri";
+                proxy_pass http://app_servers;
+            }
         }
     }
 }
