--- a/nginx.conf
+++ b/nginx.conf
@@ -48,7 +48,7 @@ http {
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
 
         location / {
-            proxy_pass http://app_servers;
+            proxy_pass http://aopen-webui:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
