fix nginx and add security enhancement

--- a/nginx.conf
+++ b/nginx.conf
@@ -15,13 +15,13 @@ http {
     gzip_comp_level 6;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
+    # Read server name from .env file
+    #env SERVER_NAME;
+
     # Upstream server configuration
     upstream app_servers {
         server open-webui:8080;
     }
-
-    # Read server name from .env file
-    env SERVER_NAME;
 
     # Configuration for the server
     server {
@@ -37,8 +37,8 @@ http {
         listen 443 ssl;
         server_name $SERVER_NAME;
 
-        ssl_certificate /path/to/cert.pem;
-        ssl_certificate_key /path/to/key.pem;
+        ssl_certificate /etc/nginx/cert/cert.pem;
+        ssl_certificate_key /etc/nginx/cert/key.pem;
 
         # Enable SSL/TLS protocols and ciphers (adjust as needed)
         ssl_protocols TLSv1.2 TLSv1.3;
@@ -48,7 +48,7 @@ http {
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
 
         location / {
-            proxy_pass http://aopen-webui:8080;
+            proxy_pass http://open-webui:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
