--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,17 @@
 worker_processes auto;
+worker_rlimit_nofile 65535;
 
 events {
-    worker_connections 4096;
+    worker_connections 8192;
+    use epoll;
+    multi_accept on;
 }
 
 http {
     sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    aio threads;
 
     http2 on;
 
@@ -15,59 +21,78 @@ http {
     gzip_comp_level 6;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
-    # Read server name from .env file
-    #env SERVER_NAME;
+    # Define proxy cache zone
+    proxy_cache_path /var/cache/nginx/static_cache levels=1:2 keys_zone=static_cache:10m max_size=10g;
+
+    # Default server for unmatched requests
+    server {
+        listen 80 default_server;
+        listen [::]:80 default_server;
+        listen 443 ssl default_server;
+        listen [::]:443 ssl default_server;
+        
+        ssl_certificate /etc/nginx/cert/cert.pem;
+        ssl_certificate_key /etc/nginx/cert/key.pem;
+
+        return 444;
+    }
 
     # Upstream server configuration
     upstream app_servers {
         server open-webui:8080;
     }
 
-    # Configuration for the server
+    # Main server block, server_name is set from env variable
     server {
-        listen 80;
-        server_name $SERVER_NAME;
-
-        # Redirect all HTTP requests to HTTPS
-        return 301 https://$SERVER_NAME$request_uri;
-    }
-
-    # HTTPS server block with reverse proxy configuration and HSTS header
-    server {
-        listen 443 ssl;
-        server_name $SERVER_NAME;
+        listen 443 ssl http2;
+        server_name ${SERVER_NAME};
 
         ssl_certificate /etc/nginx/cert/cert.pem;
         ssl_certificate_key /etc/nginx/cert/key.pem;
 
-        # Enable SSL/TLS protocols and ciphers (adjust as needed)
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256';
 
-        # Add HSTS header
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
 
         location / {
-            proxy_pass http://open-webui:8080;
+            proxy_pass http://app_servers;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
 
-            # Leverage browser caching for static assets
-            location ~* \.(jpg|jpeg|png|gif|ico|css|js|ttf|woff|woff2|svg)$ {
-                expires max;
-                add_header Cache-Control "public, immutable, max-age=31536000";
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_http_version 1.1;
+
+            proxy_cache static_cache;
+            proxy_cache_bypass $http_upgrade;
+
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+            send_timeout 60s;
+        }
+    }
+
+    # HTTP to HTTPS redirection block
+    server {
+        listen 80;
+        server_name ${SERVER_NAME};
+
+        location / {
+            if ($http_upgrade != "websocket") {
+                return 301 https://$host$request_uri;
             }
 
-            # Enable Nginx caching for specific resources
-            location /static/ {
-                proxy_cache static_cache;
-                proxy_cache_valid 200 302 1h;
-                proxy_cache_valid 404 1m;
-                proxy_cache_key "$scheme$request_method$host$request_uri";
-                proxy_pass http://app_servers;
-            }
+            proxy_pass http://app_servers;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
         }
     }
 }
