fix nginx issues

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,13 +40,17 @@ services:
 
   nginx:
     image: nginx:latest
+    env_file:
+      - .env
+    extra_hosts:
+      - "$SERVER_NAME:127.0.0.1"
     entrypoint: ["/docker-entrypoint.sh"]
-    command: ["sh", "-c", "chmod 644 /etc/nginx/cert/cert.pem && nginx -g 'daemon off;'"]
+    command: ["sh", "-c", "chmod 644 /etc/nginx/cert/cert.pem && chmod 640 /etc/nginx/cert/key.pem && nginx -g 'daemon off;'"]
     volumes:
       - ./cert:/etc/nginx/cert
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     healthcheck:
-      test: ["CMD", "curl", "-fkLI", "https://localhost"]
+      test: ["CMD", "curl", "-vIk", "--http2", "-A Healthcheck" , "https://$SERVER_NAME"]
       interval: 10s
       timeout: 5s
       retries: 3
@@ -63,3 +67,4 @@ volumes:
 networks:
   llama-net:
     driver: bridge
+    enable_ipv6: false
