--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ http {
     tcp_nodelay on;
     aio threads;
 
-    http2 on;
+    http2 on;  # Enable HTTP/2 globally
 
     gzip on;
     gzip_vary on;
@@ -21,42 +21,33 @@ http {
     gzip_comp_level 6;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
-    # Define proxy cache zone
     proxy_cache_path /var/cache/nginx/static_cache levels=1:2 keys_zone=static_cache:10m max_size=10g;
 
-    # Default server for unmatched requests
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+    ssl_prefer_server_ciphers on;
+
     server {
-        listen 80 default_server;
-        listen [::]:80 default_server;
-        listen 443 ssl default_server;
-        listen [::]:443 ssl default_server;
-        
-        ssl_certificate /etc/nginx/cert/cert.pem;
-        ssl_certificate_key /etc/nginx/cert/key.pem;
-
-        return 444;
-    }
-
-    # Upstream server configuration
-    upstream app_servers {
-        server open-webui:8080;
-    }
-
-    # Main server block, server_name is set from env variable
-    server {
-        listen 443 ssl http2;
-        server_name ${SERVER_NAME};
-
-        ssl_certificate /etc/nginx/cert/cert.pem;
-        ssl_certificate_key /etc/nginx/cert/key.pem;
-
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256';
-
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+        listen 80;
+        server_name $SERVER_NAME;
 
         location / {
-            proxy_pass http://app_servers;
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        server_name $SERVER_NAME;
+
+        ssl_certificate /etc/nginx/cert/cert.pem;
+        ssl_certificate_key /etc/nginx//cert/key.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256';
+
+        location / {
+            proxy_pass http://open-webui:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -73,26 +64,9 @@ http {
             proxy_send_timeout 60s;
             proxy_read_timeout 60s;
             send_timeout 60s;
-        }
-    }
 
-    # HTTP to HTTPS redirection block
-    server {
-        listen 80;
-        server_name ${SERVER_NAME};
-
-        location / {
-            if ($http_upgrade != "websocket") {
-                return 301 https://$host$request_uri;
-            }
-
-            proxy_pass http://app_servers;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
+            add_header Cache-Control "public, max-age=60" always;
+            expires 60s;
         }
     }
 }
