fix certificate generation

--- a/.env
+++ b/.env
@@ -1,1 +1,19 @@
-SERVER_NAME=ai.almarey.work
+# Solution webportal hostname
+SERVER_NAME = ai.example.com
+
+# Certificate Information 
+
+# Certificate expiration period in days 
+Days = 365
+# Country as two character XX
+C = EG
+# StateName
+ST = Alexandria
+# CityName
+L = Alexandria
+# CompanyName
+O = example.com
+# CompanySectionName
+OU = Information Security Team
+# Common Name prefared with wildcard as *.example.com
+CN = *.example.com
